force-app/main/default/objects/Global_Bypass__c/Global_Bypass__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global bypass mechanism</description>
    <label>Global Bypass</label>
</CustomObject>