force-app/main/default/objects/Global_Bypass__c/fields/Run_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Run_Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/disable running Assignment Rules on org.</description>
    <label>Run Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>