force-app/main/default/objects/Global_Bypass__c/fields/Run_Flows__c.field-meta.xml
<CustomField>
    <fullName>Run_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/disable running Flows on org.</description>
    <label>Run Flows</label>
    <type>Checkbox</type>
</CustomField>