force-app/main/default/objects/Global_Bypass__c/fields/Run_Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>Run_Process_Builder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/disable running Process Builder on org.</description>
    <label>Run Process Builder</label>
    <type>Checkbox</type>
</CustomField>