force-app/main/default/objects/Global_Bypass__c/fields/Run_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Run_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/disable running Triggers on org.</description>
    <label>Run Triggers</label>
    <type>Checkbox</type>
</CustomField>