force-app/main/default/objects/Global_Bypass__c/fields/Run_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Run_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/disable running Validation Rules on org.</description>
    <label>Run Validation Rules</label>
    <type>Checkbox</type>
</CustomField>