force-app/main/default/objects/Global_Bypass__c/fields/Run_Workflow_Rules__c.field-meta.xml
<CustomField>
    <fullName>Run_Workflow_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/disable running Workflow rules on org.</description>
    <label>Run Workflow Rules</label>
    <type>Checkbox</type>
</CustomField>